removido endpoint não usado
